# QuizBot

./: .env  .gitignore  Makefile  README.md  pyproject.toml  questions.json
quiz_bot/: answer.py  bot_handlers.py  database.py  main.py  quiz.py  read_file.py
